          returns an arrayref of extensions, rather than a single scalar.
          The same change has been made to App::Prove::State::extension().
        - Preserve old semantics for test scripts with a shebang line
          by favouring Perl as the intepreter for any file with a
          shebang (#59457).
        - Add --trap (summary on Ctrl-C) option to prove (#59427).

3.21    2010-01-30
        - Add test to ensure we're not depending on a module we no
          longer ship.
        - Fix up skip counts for Windows case - tests were failing
          on Windows.

3.20    2010-01-22
        - Remove references / dependency on TAP::Parser::Source::Perl

3.19    2010-01-20
        - Avoid depending on Module::Build. The resulting circular
          dependency made it impossible to install Test::Harness and/or
          Module::Build in some cases.

3.18    2010-01-19
        - Handle the case where the filename of the perl executable
          contains space. Thanks to kmx.
        - Various documentation fixes.

3.17_04 2010-01-04
        - Fix failures due to unknown location of Perl in t/source_handler.t.
        - Use EUMM style shebang magic to produce an executable 'psql'
          for t/source_handler.t.

3.17_03 2009-11-19
        - Fix failures due to over-strict assertions in t/source.t.

3.17_02 2009-11-17
        - Merge in Steve's missing changes. Oops.

3.17_01 2009-11-17
        - Re-engineered source handling API to allow users to configure how
          TAP is sourced by the parser.  Introduced a new 'sources' param to
          TAP::Harness, and new options to prove, eg:

              prove --source XYZ --xyz-option foo=bar

          The new TAP::Parser::SourceHandler API makes it much easier to
          write plugins.  This breaks backwards compatibility for plugins &
          extenstions that rely on the following APIs:

              TAP::Parser::Source
              TAP::Parser::SourceFactory