@@ -1,3 +1,0 @@
-#!/usr/bin/perl
-
-print $_, $/ for @ARGV;
